Closed
Bug 1643169
Opened 5 years ago
Closed 5 years ago
media/mtransport/third_party/nICEr/src/stun/addrs-bsd.c:43:18: error: subscripted value is not an array, pointer, or vector
Categories
(Core :: WebRTC: Networking, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | fixed |
People
(Reporter: jbeich, Assigned: bwc)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
$ c++ --version
FreeBSD clang version 10.0.1 (git@github.com:llvm/llvm-project.git llvmorg-10.0.1-rc1-0-gf79cd71e145)
Target: x86_64-unknown-freebsd13.0
Thread model: posix
InstalledDir: /usr/bin
$ ./mach bootstrap
$ ./mach build
[...]
In file included from Unified_c_third_party_nICEr1.c:11:
media/mtransport/third_party/nICEr/src/stun/addrs-bsd.c:43:18: error: subscripted value is not an array, pointer, or vector
flags = ifr6.ifr_flags;
~~~~~^~~~~~~~~
/usr/include/net/if.h:419:38: note: expanded from macro 'ifr_flags'
#define ifr_flags ifr_ifru.ifru_flags[0] /* flags (low 16 bits) */
^~
1 error generated.
Either ifr_ifru.ifru_flags or ifr_ifru.ifru_flags6 works but not ifr_flags alias.
See also https://searchfox.org/mozilla-central/rev/7cadba1d8b8f/media/webrtc/trunk/webrtc/rtc_base/macifaddrs_converter.cc#221
Updated•5 years ago
|
Severity: -- → S2
Priority: -- → P1
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1183145
status-firefox77:
--- → unaffected
status-firefox78:
--- → unaffected
status-firefox-esr68:
--- → unaffected
| Assignee | ||
Comment 3•5 years ago
|
||
On it.
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Comment 5•5 years ago
•
|
||
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/592a83b0c9de
Use ifr_ifru.ifru_flags6 instead of the ifr_flags macro, because the latter does not work properly on FreeBSD. r=mjf
Comment 9•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•