Bug 1643169: Use ifr_ifru.ifru_flags6 instead of the ifr_flags macro, because the latter does not work properly on FreeBSD. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D78319